// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app-generator allows a custom repository name 1`] = `
Object {
  "content": "{
  \\"name\\": \\"my-nice-custom-project\\",
  \\"version\\": \\"1.0.0\\",

  \\"keywords\\": [
    \\"liferay-fragments\\"
  ],

  \\"scripts\\": {
    \\"add-collection\\": \\"yo liferay-fragments:collection\\",
    \\"add-fragment\\": \\"yo liferay-fragments:fragment\\",
    \\"compress\\": \\"yo liferay-fragments:compress\\",
    \\"export\\": \\"yo liferay-fragments:export\\",
    \\"import\\": \\"yo liferay-fragments:import\\",
    \\"import:watch\\": \\"yo liferay-fragments:import --watch\\"
  }
}
",
  "filePath": "/package.json",
}
`;

exports[`app-generator allows a custom repository name 2`] = `
Object {
  "content": "# My Nice Custom Project
",
  "filePath": "/README.md",
}
`;

exports[`app-generator allows adding sample content 1`] = `
Object {
  "content": "{
  \\"name\\": \\"sample-liferay-fragments\\",
  \\"version\\": \\"1.0.0\\",

  \\"keywords\\": [
    \\"liferay-fragments\\"
  ],

  \\"scripts\\": {
    \\"add-collection\\": \\"yo liferay-fragments:collection\\",
    \\"add-fragment\\": \\"yo liferay-fragments:fragment\\",
    \\"compress\\": \\"yo liferay-fragments:compress\\",
    \\"export\\": \\"yo liferay-fragments:export\\",
    \\"import\\": \\"yo liferay-fragments:import\\",
    \\"import:watch\\": \\"yo liferay-fragments:import --watch\\"
  }
}
",
  "filePath": "/package.json",
}
`;

exports[`app-generator allows adding sample content 2`] = `
Object {
  "content": "# Sample Liferay Fragments
",
  "filePath": "/README.md",
}
`;

exports[`app-generator allows adding sample content 3`] = `
Object {
  "content": "{
  \\"cssPath\\": \\"styles.css\\",
  \\"htmlPath\\": \\"index.html\\",
  \\"jsPath\\": \\"main.js\\",
  \\"name\\": \\"Sample fragment\\"
}
",
  "filePath": "fragment.json",
}
`;

exports[`app-generator allows adding sample content 4`] = `
Object {
  "content": "<div class=\\"sample-fragment\\">
  Sample fragment
</div>
",
  "filePath": "index.html",
}
`;

exports[`app-generator allows adding sample content 5`] = `
Object {
  "content": ".sample-fragment {
  color: inherit;
}
",
  "filePath": "styles.css",
}
`;

exports[`app-generator allows adding sample content 6`] = `
Object {
  "content": "const content = fragmentElement.querySelector('.sample-fragment');
",
  "filePath": "main.js",
}
`;

exports[`app-generator generates a new project 1`] = `
Object {
  "content": "{
  \\"name\\": \\"sample-liferay-fragments\\",
  \\"version\\": \\"1.0.0\\",

  \\"keywords\\": [
    \\"liferay-fragments\\"
  ],

  \\"scripts\\": {
    \\"add-collection\\": \\"yo liferay-fragments:collection\\",
    \\"add-fragment\\": \\"yo liferay-fragments:fragment\\",
    \\"compress\\": \\"yo liferay-fragments:compress\\",
    \\"export\\": \\"yo liferay-fragments:export\\",
    \\"import\\": \\"yo liferay-fragments:import\\",
    \\"import:watch\\": \\"yo liferay-fragments:import --watch\\"
  }
}
",
  "filePath": "/package.json",
}
`;

exports[`app-generator generates a new project 2`] = `
Object {
  "content": "# Sample Liferay Fragments
",
  "filePath": "/README.md",
}
`;
